# audit_juridique

./: 260518_Document_par_Jalon_V12.xlsx  260518_Document_par_Jalon_V13.xlsx  Annexe pour fichier PPT.md  Annexe pour fichier plan de masse.md  EnerVivo_Documents_Jalon_V10.xlsx  EnerVivo_Documents_Jalon_V11.xlsx  EnerVivo_Liste_Documents_Projet_V2.xlsx  PRESENTATION.md  descriptions_part1.md  descriptions_part1_V13.md  descriptions_part2.md  descriptions_part2_V13.md  meet.md  non exact.md  rapport_audit_DDENIS_v6.html  requirements.txt  test.py
enervivo-audit/apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  celery_app.py  main.py  pyproject.toml
enervivo-audit/apps/api/alembic/: env.py
enervivo-audit/apps/api/alembic/versions/: 20260101_0000_001_initial_schema.py  20260610_0000_002_tool_version.py
enervivo-audit/apps/api/config/: Annexe_fichier_TADD.md  annexe_plan_masse.md  descriptions_part1.md  descriptions_part2.md  documents_projet_v2.json  documents_v12.json  projects_seed.json  settings.py  tool_version.json
enervivo-audit/apps/api/db/: models.py  session.py
enervivo-audit/apps/api/db/repositories/: audits.py  classifications.py  projects.py  users.py
enervivo-audit/apps/api/models/: audit.py  document.py  project.py
enervivo-audit/apps/api/routers/: admin.py  audits.py  auth.py  health.py  projects.py
enervivo-audit/apps/api/scripts/: convert_excel_to_json.py  convert_liste_projet_to_json.py  find_projects.py  generate_ts_types.py  seed.py  test_sharepoint.py
enervivo-audit/apps/api/services/: version.py
enervivo-audit/apps/api/services/audit/: __init__.py  engine.py  (+5 more)
enervivo-audit/apps/api/tasks/: audit_tasks.py  sync_tasks.py
enervivo-audit/apps/api/tests/: test_classifier.py  test_domain_filter.py  test_extraction.py
(+95 files in other folders)
